changed themes.xml, added spinner values

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,5 +8,6 @@
     <string name="hint_phone_number">Phone Number</string>
     <string name="button_text_signup">SIGNUP</string>
     <string name="image_view_app_logo">App Logo</string>
+    <string name="text_view_title">Your Title:</string>
 
 </resources>
